# ZotVault

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.ko.md  README.md  config.example.toml  graph.json  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  publish.yml
docs/: ANALYSIS.md  ARCHITECTURE.md  MIGRATION.md  PROXY.md
launchd/: com.paperflow.daemon.plist
paperflow/: __init__.py  __main__.py  alerts.py  analysis_queue.py  cli.py  config.py  daemon.py  enrich.py  note_renderer.py  pdf_resolver.py  pipeline.py  proxy.py  related.py  search.py  state.py  synthesis.py  webapp.py  zotero_reader.py  zotero_writer.py
paperflow/static/: index.html
scripts/: apply_edits.sh  build_app.sh  check_stdlib_only.py
tests/: test_alerts.py  test_analysis_queue.py  test_analyze.py  test_annotations.py  test_assist.py  test_config.py  test_health.py  test_i18n_indexer.py  test_indexer.py  test_note_renderer.py  test_pipeline.py  test_proxy.py  test_related.py  test_search.py  test_state.py  test_synthesis.py  test_webapp.py  test_zotero_reader.py  test_zotero_writer.py
zotvault/: __init__.py  __main__.py  alerts.py  analysis_queue.py  analyze.py  annotations.py  assist.py  cli.py  config.py  daemon.py  enrich.py  health.py  i18n.py  indexer.py  note_renderer.py  pdf_resolver.py  pipeline.py  proxy.py  related.py  search.py  state.py  synthesis.py  tray.py  webapp.py  zotero_reader.py  zotero_writer.py
zotvault/static/: index.html
