[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "paperflow"
version = "0.5.0"
description = "Local-first paper pipeline orchestrator between Zotero and Obsidian: detect, note, fetch PDF, queue AI analysis, index."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jongmin Baek" }]
keywords = ["zotero", "obsidian", "papers", "research", "pkm", "local-first"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering",
]

[project.scripts]
paperflow = "paperflow.cli:main"

[tool.setuptools]
packages = ["paperflow"]

[tool.setuptools.package-data]
paperflow = ["static/*.html"]
