[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "zotvault"
version = "0.9.1"
description = "Local-first paper pipeline orchestrator between Zotero and Obsidian: detect, note, fetch PDF, queue AI analysis, index."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Jongmin Baek" }]
keywords = ["zotero", "obsidian", "papers", "research", "pkm", "local-first"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
tray = ["pystray>=0.19", "Pillow>=9"]

[project.scripts]
zotvault = "zotvault.cli:main"

[tool.setuptools]
packages = ["zotvault"]

[tool.setuptools.package-data]
zotvault = ["static/*.html"]
